tests/NormalTests/paczka1/small_fuzzy/91227698.err
Error in line 8: wMCrApV8 S774 28,5
Error in line 4: S331 S41 51,3
